[project]
name = "scraper"
version = "0.1.0"
description = "An AWS Lambda to scrape information from countries surrounding the Ukraine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "TechFor_", email = "ukraine@techfor.io" },
]
requires-python = ">=3.10,"
dependencies = [
    "beautifulsoup4==4.10.0",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12",
    "idna==3.3",
    "pre-commit-hooks==4.1.0",
    "requests==2.27.1",
    "ruamel.yaml==0.17.21",
    "ruamel.yaml.clib==0.2.6",
    "soupsieve==2.3.1",
    "toml==0.10.2",
    "urllib3==1.26.8",
    "xmltodict==0.12.0",
    "sumopy==0.2",
    "python-json-logger==2.0.2",
]

[project.urls]
homepage = "https://github.com/Ukraine-Relief-Efforts/scraper"
repository = "https://github.com/Ukraine-Relief-Efforts/scraper"
documentation = "https://ukraine-relief-efforts.github.io/scraper/"

[project.optional-dependencies]
tests = [
    "pytest==7.0.1",
    "pytest-timeout>=2.0.2",
    "pytest-xdist>=2.5.0",
    "boto3==1.21.16",
    "pyfakefs==4.5.5",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-autoprogram>=0.1.7",
    "sphinx-rtd-theme>=1.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.sphinx]
copyright = "TechFor_"
author = "TechFor_"
api_dir = "../../src"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-n 4 -r a -v tests --timeout=10 --doctest-modules src"
